--- a/properties/project.properties
+++ b/properties/project.properties
@@ -1,5 +1,4 @@
 # Project specific properties
 Project.Name=DevOpsApp
 Project.Version=12.2.0
-Project.Status=RC
-Project.Classifier=BETA
+Project.Classifier=RC
