Updated source locations and added customers.cls

--- a/properties/build.properties
+++ b/properties/build.properties
@@ -2,15 +2,17 @@
 pct=${dlc}/pct
 dlc.java.dir=${dlc}/java
 dir.build=./build
-dir.src=./src/main/openedge
+dir.src=./src/main/abl
 dir.test=./src/test/abl
+# other SRC directories
+dir.openedge=${dir.src}/openedge
+dir.bin=${dir.src}/bin
+dir.tlr=${dir.src}/tlr
+dir.conf=${dir.src}/conf
+dir.instance=${dir.src}/instance
+# Build destinations
 dir.test.results=${dir.build}/tests
 dir.dist=${dir.build}/dist
 dir.rcode=${dir.build}/rcode
-dir.openedge=./src/main/openedge
-dir.bin=./src/main/bin
-dir.tlr=./src/main/tlr
-dir.conf=./src/main/conf
-dir.rcode=./build/rcode
-dir.instance=./src/main/instance
-dir.webapps=./build/webapps
+dir.webapps=${dir.build}/webapps
+
