--- a/build.xml
+++ b/build.xml
@@ -38,7 +38,7 @@
             	<pathelement location="${dlc.java.dir}/ext/jettison-1.2.jar" />
             	<pathelement location="${dlc.java.dir}/ext/commons-logging-1.2.jar" />
             	<pathelement location="${dlc.java.dir}/ext/xmlschema-core-2.2.1.jar" />
-                <pathelement location="${dlc.java.dir}/ext/Jettison-1.4.0.jar" />
+                <pathelement location="${dlc.java.dir}/ext/jettison-1.4.0.jar" />
         	</classpath>
         </taskdef>
     </target>
