--- a/build.xml
+++ b/build.xml
@@ -142,6 +142,8 @@
     </target>
 
     <target name="packageApp" depends="packageWebApp">
+        <!-- we need to copy the pl into the openedge dir -->
+        <copy file="${dir.dist}/${Project.Name}-${Project.Version}-${Project.Classifier}.pl" todir="${dir.rcode}"/>
         <ABLApp description="DevOpsApp creation"
             appName="${Project.Name}"
             archiveBaseName="${Project.Name}"
@@ -152,7 +154,7 @@
 
             <tlr dir="${dir.tlr}" />
             <conf dir="${dir.conf}" />
-            <openedge dir="${dir.rcode}" includes="**/*.r,*.gen,*.map" />
+            <openedge dir="${dir.rcode}" includes="**/*.r,*.gen,*.map,*.pl" />
             <webapps dir="${dir.webapps}" />
 
         </ABLApp>
@@ -162,18 +164,10 @@
         <!-- DevOpsApp-->
         <ABLWebAppPackage 
             dlc="${dlc}" 
-            webAppName="${Project.Name}" 
+            webAppName="${Project.webapp}" 
             verbose="false" 
 			isIncremental="false" 
             services="CustomerSVC,HelloSVC"
-            srcdir="${basedir}" 
-            destdir="${dir.webapps}" />
-        <!-- ROOT-->
-        <ABLWebAppPackage 
-            dlc="${dlc}" 
-            webAppName="ROOT" 
-            verbose="false" 
-			isIncremental="false" 
             srcdir="${basedir}" 
             destdir="${dir.webapps}" />
     
