--- a/properties/project.properties
+++ b/properties/project.properties
@@ -2,5 +2,5 @@
 Project.Name=DevOpsApp
 Project.Version=12.2.0
 Project.Classifier=RC
-Project.webapp=DevOpsPAS
+Project.webapp=DevOpsDemo
 #Project.ablapp=DevOpsApp
