--- a/src/main/abl/tlr/merge.properties
+++ b/src/main/abl/tlr/merge.properties
@@ -1,13 +1,13 @@
-# Generated from file 'd:\servers\DevOpsPAS\conf\openedge.properties' on 2020-05-21 11:51
-# Requested ABL application(s): DevOpsPAS
+# Requested ABL application(s): DevOpsDemo
+[DevOpsDemo]
+    webApps=DevOpsApp
 
-
-[AppServer.Agent.DevOpsPAS]
+[AppServer.Agent.DevOpsDemo]
     agentShutdownProc=
     agentStartupProc=
     agentStartupProcParam=
     numInitialSessions=2
-    PROPATH=${catalina.base}/ablapps/DevOpsPAS/openedge/DevOpsApp-RC-12.2.0.pl;${catalina.base}/webapps/ROOT/WEB-INF/openedge,${catalina.base}/ablapps/DevOpsPAS/openedge,${catalina.base}/openedge,d:/OE122/OpenEdge/tty,d:/OE122/OpenEdge/tty/netlib/OpenEdge.Net.pl,D:/servers/DevOpsPAS/webapps/DevOpsApp/WEB-INF/openedge
+    PROPATH=${catalina.base}/ablapps/DevOpsDemo/openedge/DevOpsApp-RC-12.2.0.pl;${catalina.base}/webapps/ROOT/WEB-INF/openedge,${catalina.base}/ablapps/DevOpsDemo/openedge,${catalina.base}/openedge,d:/OE122/OpenEdge/tty,d:/OE122/OpenEdge/tty/netlib/OpenEdge.Net.pl,D:/servers/DevOpsDemo/webapps/DevOpsApp/WEB-INF/openedge
     sessionActivateProc=
     sessionConnectProc=
     sessionDeactivateProc=
@@ -16,21 +16,21 @@
     sessionStartupProc=
     sessionStartupProcParam=
     updateProperties=false
-    uuid=http://EC2AMAZ-N7MUP6S:8241/DevOpsPAS
+    uuid=http://EC2AMAZ-N7MUP6S:8241/DevOpsDemo
 
  #
  #  Default properties for Session Manager
  #
-[AppServer.SessMgr.DevOpsPAS]
+[AppServer.SessMgr.DevOpsDemo]
     agentLogEntryTypes=ASPlumbing,DB.Connects
-    agentLogFile=${catalina.base}/logs/DevOpsPAS.agent.{yyyy-mm-dd}.log
+    agentLogFile=${catalina.base}/logs/DevOpsDemo.agent.{yyyy-mm-dd}.log
     agentStartupParam=-T "${catalina.base}/temp"
     brkrDebuggerEnabled=0
     collectMetrics=3
-    publishDir=D:/servers/DevOpsPAS/openedge
+    publishDir=D:/servers/DevOpsDemo/openedge
     updateProperties=false
 
-[DevOpsPAS.DevOpsApp]
+[DevOpsDemo.DevOpsApp]
     allowRuntimeUpdates=1
     collectMetrics=1
     statusEnabled=1
@@ -38,7 +38,7 @@
 # See $CATALINA_HOME/conf/openedge.properties.README for details on the properties below.
 # DO NOT MODIFY any ${} tags
 # Transport properties for the APSV protocol
-[DevOpsPAS.DevOpsApp.APSV]
+[DevOpsDemo.DevOpsApp.APSV]
     adapterEnabled=0
     enableRequestChunking=1
     oepingEnabled=0
@@ -47,11 +47,11 @@
     useHTTPSessions=1
 
 # Transport properties for the REST protocol
-[DevOpsPAS.DevOpsApp.REST]
+[DevOpsDemo.DevOpsApp.REST]
     adapterEnabled=0
 
 # Transport properties for the SOAP protocol
-[DevOpsPAS.DevOpsApp.SOAP]
+[DevOpsDemo.DevOpsApp.SOAP]
     adapterEnabled=0
     adminEnabled=1
     adminSoapAction=urn:services-progress-com:wsa-admin:01
@@ -60,7 +60,7 @@
     wsdlEnabled=1
 
 # Transport properties for the WEB protocol
-[DevOpsPAS.DevOpsApp.WEB]
+[DevOpsDemo.DevOpsApp.WEB]
     adapterEnabled=1
     defaultCookieDomain=
     defaultCookiePath=
